--- a/03-transcriptomics_data_cleaning.Rmd
+++ b/03-transcriptomics_data_cleaning.Rmd
@@ -262,25 +262,28 @@ save(DGE_space %>% select(contrast, res_shrink), "data/dge_space.rds")
 ## Gene set enrichment analysis
 ```{r dge result}
 de_v1_full <- readr::read_rds("data/de_v1_full.rds")
-gse121212 <- readr::read_rds("https://rawcdn.githack.com/tuhulab/gse121212/0ba93240d13b753bf32fd0aab0841fb6968b0ea5/data/DGE_full_model.rds")
-gse107361 <- readr::read_rds("data/gse107361_dge.rds")
-gse120721 <- readr::read_rds("data/gse120721_dge.rds") %>% mutate(project = )
+gse107361 <- readr::read_rds("data/dge_gse107361.rds") # adult vs children
+gse120721 <- readr::read_rds("data/dge_gse120721.rds") # LSM
+gse121212 <- readr::read_rds("data/dge_gse121212.rds")
+ChronicvsAcute <- readr::read_rds("data/dge_AcutevsChronic.rds")
 
 dge_result <-
   tibble(
     project = c(rep("multi-omics",length(de_v1_full)), 
                 rep("gse121212",nrow(gse121212)),
                 rep("gse107361",nrow(gse107361)),
-                rep("gse120721",nrow(gse120721))),
-    contrast = c(de_v1_full %>% names, 
+                rep("gse120721",nrow(gse120721)),
+                rep("acute_chronic", nrow(ChronicvsAcute))),
+    contrast = c(de_v1_full %>% names %>% str_remove("de_v1_"), 
                  gse121212$contrast, 
                  gse107361$contrast,
-                 gse120721$contrast),
+                 gse120721$contrast,
+                 ChronicvsAcute$contrast),
     dge_result = c(de_v1_full, 
                    gse121212$res_shrink,
                    gse107361$dge_result,
-                   gse120721$dge_result)
-)
+                   gse120721$dge_result,
+                   ChronicvsAcute$data))
 ```
 
 ```{r prepare gene set, cache=TRUE}
